--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             background: rgba(0, 0, 0, 0.5);
             padding: 10px 20px;
             border-radius: 5px;
+            top: 2;
+            right: 2;
         }
     </style>
 </head>
