modified position to sticky

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
 
         .text {
-            position: absolute;
+            position: sticky;
             color: white;
             font-size: 24px;
             font-weight: bold;
