--- a/gsap.html
+++ b/gsap.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <div class="box1">box1</div>
+    <div class="box1">box1 box3 box4</div>
 
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.7/dist/gsap.min.js"></script>
     <script src="./script.js"></script>
