--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             align-items: center;
             width: 400px; /* Adjust width as needed */
             height: 300px; /* Adjust height as needed */
+            color: blue;
         }
 
         .image {
@@ -31,6 +32,8 @@
             inset: 2;
             top: 2;
             right: 2;
+
+            bottom: 4;
         }
     </style>
 </head>
