--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
             align-items: center;
             width: 400px; /* Adjust width as needed */
             height: 300px; /* Adjust height as needed */
+            color: red;
+            font-weight: bold;
         }
 
         .image {
